--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="01_menu_switch.html">選項開關</a></li>
         <li><a href="02_variable.html">變數練習</a></li>
+        <li><a href="03_modal.html">蓋板</a></li>
     </ul>
 </body>
 </html>
