--- a/03_modal.html
+++ b/03_modal.html
@@ -16,7 +16,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            /* display: none; */
+            display: none;
         }
         .modal-wrapper.active{
             display: block;
@@ -43,10 +43,10 @@
 </head>
 
 <body>
-    <a href="javacript:";onclick="openModal()";id="open-modal">打開蓋板</a>
+    <a href="javascript:;"onclick="openModal();"id="open-modal">打開蓋板</a>
     <div class="modal-wrapper">
         <div class="modal-content">
-            <div id="btn-close-swith" class="btn-close">x</div>
+            <div id="btn-close-switch" class="btn-close">x</div>
             廣告區塊
             <br>
             <br>
@@ -63,8 +63,24 @@
 <p>07</p>
 <p>08</p>
     <script>
+        let modalWrapper = document.getElementsByClassName('modal-wrapper')[0]
+        let btnCloseSwitch = document.getElementById('btn-close-switch')
+        btnCloseSwitch.addEventListener('click',closeModal)
+        modalWrapper.addEventListener('click',closeModal)
 
-
+        function openModal(){
+            modalWrapper.classList.add('active')
+        }//openModal end
+        function closeModal(e){
+            console.log(e.target)
+            console.log(this)
+            if(e.target==this){
+                console.log('符合事件的選取器')
+                modalWrapper.classList.remove('active')
+            }else{
+                console.log('不符合')
+            }//closeModal end
+        }//closeModal end
     </script>
 </body>
 </html>
